--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,13 @@
 
 	<groupId>au.gov.aims</groupId>
 	<artifactId>sld</artifactId>
-	<version>0.1.6</version>
+	<version>0.1.7</version>
 	<packaging>jar</packaging>
+
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
 	<!-- Search maven repo: http://search.maven.org -->
 	<dependencies>
