[KS-33] Fix mvn-repo

--- a/pom.xml
+++ b/pom.xml
@@ -27,4 +27,11 @@
 		</dependency>
 	</dependencies>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/aims-ks/sld</url>
+		</repository>
+	</distributionManagement>
 </project>
