[KS-33] Fix mvn-repo

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -30,8 +30,8 @@
 	<distributionManagement>
 		<repository>
 			<id>github</id>
-			<name>GitHub OWNER Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/aims-ks/sld</url>
+			<name>GitHub AIMS-KS Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/aims-ks/mvn-repo</url>
 		</repository>
 	</distributionManagement>
 </project>
